--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,45 @@
 version: '3.1'
 
 services:
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    environment:
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASS: ${MYSQL_PASS}
+      MYSQL_DATABASE: ${MYSQL_DB}
+    depends_on:
+      - db
+    volumes:
+      - ./db/grafana/data:/var/lib/grafana/data
+      - ./db/grafana/provisioning:/etc/grafana/provisioning
+    ports:
+      - 8080:3000
+    networks:
+      - expenses-net
+
   db:
     image: "mysql:latest"
     ports:
       - "3306:3306"
     container_name: db
     environment:
-      MYSQL_USER: testuser
-      MYSQL_PASSWORD: testpassword
-      MYSQL_DATABASE: testdb
-      MYSQL_ROOT_PASSWORD: testroot
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASS}
+      MYSQL_DATABASE: ${MYSQL_DB}
+      MYSQL_ROOT_PASSWORD: toor
+    networks:
+      - expenses-net
 
   create-schema:
     image: "mysql:8"
     container_name: create-schema
-    #depends_on:
-      #- db
     volumes:
-      - ./scripts:/app/scripts
-    command: ["sh", "-c", 'while true ; do sleep 10 ; mysql -h"db" -P"3306" -utestuser -p"testpassword" -Dtestdb </app/scripts/schema.sql 2>&1 |grep "already exists" && break; done']
+      - ./db/scripts:/app/scripts
+    command: ["sh", "-c", 'while true ; do sleep 10 ; mysql -h"db" -P"3306" -uapp -p"apppass" -Dexpensesdb </app/scripts/schema.sql 2>&1 |grep "already exists" && break; done']
+    networks:
+      - expenses-net
 
+networks:
+  expenses-net:
+    name: expenses-net
