--- a/db/grafana/provisioning/datasources/automatic.yml
+++ b/db/grafana/provisioning/datasources/automatic.yml
@@ -1,16 +1,12 @@
 apiVersion: 1
 
-deleteDatasources:
-  - name: Expenses
-    orgId: 1
-
 datasources:
-- name: Expenses
+- name: Exp Spain
   type: mysql
   access: proxy
   url: db:3306
   user: $MYSQL_USER
   secureJsonData:
     password: $MYSQL_PASS
-  database: $MYSQL_DB
+  database: expensesdb
 
