--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
-# A base64 encoded of your Google Project Service Account credentials.json file
-SHEETS_IMPORTER_SA=
+# App variables
+
+# Mysql Database
+
+MYSQL_USER=app
+MYSQL_PASS=apppass
+MYSQL_PORT=3306
+MYSQL_HOST=localhost
+MYSQL_DB=expensesdb
+
+# Sheets importer
+SHEETS_IMPORTER_SA_PATH=
+SHEETS_IMPORTER_ID=
+SHEETS_IMPORTER_PAGERANGE=ExamplPageName!A:I
