JWT Auth for API :eyes:

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ MYSQL_DB=expensesdb
 SHEETS_IMPORTER_SA_PATH=
 SHEETS_IMPORTER_ID=
 SHEETS_IMPORTER_PAGERANGE=ExamplPageName!A:I
+
+# API
+JWT_SECRET_SEED=eifrccgclhcrergdffdliklugiucbehttluribclkcgg
+
