Podman as dev env

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 
 # Mysql Database
 
-MYSQL_USER=app
-MYSQL_PASS=apppass
+MYSQL_USER=expuser
+MYSQL_PASS=password
 MYSQL_PORT=3306
 MYSQL_HOST=localhost
-MYSQL_DB=expensesdb
+MYSQL_DB=expdb
 
 # Sheets importer
 SHEETS_IMPORTER_SA_PATH=
@@ -14,5 +14,5 @@ SHEETS_IMPORTER_ID=
 SHEETS_IMPORTER_PAGERANGE=ExamplPageName!A:I
 
 # API
-JWT_SECRET_SEED=eifrccgclhcrergdffdliklugiucbehttluribclkcgg
+JWT_SECRET_SEED=
 
