Fix dotfiles for mac issue

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,28 @@
-# App variables
+#App variables
 
+# Json storage
+JSON_STORAGE_PATH=
 # Mysql Database
-
-MYSQL_USER=expuser
-MYSQL_PASS=password
-MYSQL_PORT=3306
-MYSQL_HOST=localhost
-MYSQL_DB=expdb
+MYSQL_USER=
+MYSQL_PASS=
+MYSQL_PORT=
+MYSQL_HOST=
+MYSQL_DB=
 
 # Sheets importer
 SHEETS_IMPORTER_SA_PATH=
 SHEETS_IMPORTER_ID=
-SHEETS_IMPORTER_PAGERANGE=ExamplPageName!A:I
+# SHEETS_IMPORTER_PAGERANGE=Expenses!A:I
+SHEETS_IMPORTER_PAGERANGE=
+SHEETS_IMPORTER_RAGELEN=
 
 # API
 JWT_SECRET_SEED=
+# CORS_ALLOWLIST= * or https://vpn.lucascontre.site
+CORS_ALLOWLIST=
+#
+# Telegram Bot
+# For more specific configuration please check https://github.com/contre95/expenses-app/blob/QueryExpenses/cmd/api/main.go#L127-L131 
+TELEGRAM_APITOKEN=
+
 
