Port to sqlite also

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 
 # Json storage
 JSON_STORAGE_PATH=
+
+STORAGE_ENGINE= "sqlite" | "myqsl"
+
+# SQlite
+SQLITE_PATH=
+
 # Mysql Database
 MYSQL_USER=
 MYSQL_PASS=
