--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ STORAGE_ENGINE= "sqlite" | "myqsl"
 # SQlite
 SQLITE_PATH=
 
-# Mysql Database
+# MySQL Database
 MYSQL_USER=
 MYSQL_PASS=
 MYSQL_PORT=
