--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,5 @@ CORS_ALLOWLIST=
 # Telegram Bot
 # For more specific configuration please check https://github.com/contre95/expenses-app/blob/QueryExpenses/cmd/api/main.go#L127-L131 
 TELEGRAM_APITOKEN=
-
-
+# Comma separated usernames like john,maria
+TELEGRAM_ALLOWED_USERNAMES=
