Steam on notebook

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
 #App variables
 
-# Json storage
-JSON_STORAGE_PATH=
-
-STORAGE_ENGINE= "sqlite" | "myqsl"
+STORAGE_ENGINE="sqlite" # "sqlite" or "mysql"
 
 # SQlite
-SQLITE_PATH=
-# JSON
-JSON_STORAGE_PATH=
+SQLITE_PATH=./exp.example.db
+# Json storage (for users)
+JSON_STORAGE_PATH=./users.example.json
 
 # MySQL Database
 MYSQL_USER=
