--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,21 @@
 #App variables
 
-STORAGE_ENGINE="sqlite" # "sqlite" or "mysql"
+# "sqlite" or "mysql"
+STORAGE_ENGINE="sqlite" 
 
-# SQlite
+# MySQL Database:
+# podman run --rm --name mysql-container -e MYSQL_DATABASE=expdb -e MYSQL_USER=expuser -e MYSQL_PASSWORD=11223344 -e MYSQL_ROOT_PASSWORD=rootpassword -p 3306:3306 mysql:latest
+MYSQL_USER=expuser
+MYSQL_PASS=11223344
+MYSQL_PORT=3306
+MYSQL_HOST=localhost
+MYSQL_DB=expdb
+
+# SQLite storage path (for expenses)
 SQLITE_PATH=./exp.example.db
-# Json storage (for users)
-JSON_STORAGE_PATH=./users.example.json
 
-# MySQL Database
-MYSQL_USER=
-MYSQL_PASS=
-MYSQL_PORT=
-MYSQL_HOST=
-MYSQL_DB=
+# JSON storage path (for users)
+JSON_STORAGE_PATH=./users.example.json
 
 # CORS_ALLOWLIST= * or https://vpn.lucascontre.site
 CORS_ALLOWLIST=
