Rules now with users

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 
 # "sqlite" or "mysql"
 STORAGE_ENGINE="sqlite" 
+# true or false to initialize sysmtem filled with an example
+LOAD_SAMPLE_DATA=true
 
 # MySQL Database:
 # podman run --rm --name mysql-container -e MYSQL_DATABASE=expdb -e MYSQL_USER=expuser -e MYSQL_PASSWORD=11223344 -e MYSQL_ROOT_PASSWORD=rootpassword -p 3306:3306 mysql:latest
@@ -11,11 +13,11 @@ MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_DB=expdb
 
-# SQLite storage path (for expenses)
-SQLITE_PATH=./exp.example.db
+# SQLite storage path
+SQLITE_PATH=./exp.db
 
-# JSON storage path (for users)
-JSON_STORAGE_PATH=./users.example.json
+# JSON storage:: a path where you wan to store your users 
+JSON_STORAGE_PATH=./users.json
 
 # CORS_ALLOWLIST= * or https://vpn.lucascontre.site
 CORS_ALLOWLIST=
