--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 
 # "sqlite" or "mysql"
 STORAGE_ENGINE="sqlite" 
-# true or false to initialize sysmtem filled with an example
+
+# true or false to initialize sysmtem filled with an example, if deleted, items will be recreated on restart
 LOAD_SAMPLE_DATA=true
 
 # MySQL Database:
@@ -25,5 +26,3 @@ CORS_ALLOWLIST=
 # Telegram Bot
 # For more specific configuration please check https://github.com/contre95/expenses-app/blob/QueryExpenses/cmd/api/main.go#L127-L131 
 TELEGRAM_APITOKEN=
-# Comma separated usernames like john,maria
-TELEGRAM_ALLOWED_USERNAMES=
