--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,10 @@ CORS_ALLOWLIST=
 #
 # Telegram Bot
 # For more specific configuration please check https://github.com/contre95/expenses-app/blob/QueryExpenses/cmd/api/main.go#L127-L131 
+
+# This are the ones that I found that work best, but feel free to try your own
 TELEGRAM_APITOKEN=
+VISION_MODEL=llama3.2-vision:11b-instruct-q4_K_M
+TEXT_MODEL=llama3.2:3b-instruct-q6_K 
+OLLAMA_ENDPOINT=http://localhost:11434/api/generate
+
