--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ SQLITE_PATH=./exp.db
 # JSON storage:: a path where you wan to store your users 
 JSON_STORAGE_PATH=./users.json
 
-# CORS_ALLOWLIST= * or https://vpn.lucascontre.site
+# CORS_ALLOWLIST= * or https://vpn.yourdomain.xyz
 CORS_ALLOWLIST=
 #
 # Telegram Bot
