--- a/.github/workflows/container-build-pipeline.yaml
+++ b/.github/workflows/container-build-pipeline.yaml
@@ -54,16 +54,16 @@ jobs:
           new_version="v${major}.${minor}.${patch}"
           echo "New version: $new_version"
           echo "new_version=$new_version" >> $GITHUB_ENV
-      - name: Build and push Docker image
+      - name: Build and push Container image
         run: |
           # Build and push the versioned image
-          docker buildx build --platform linux/amd64,linux/arm64 \
+          podman build --platform linux/amd64,linux/arm64 \
             -t contre95/expense-mate:${{ env.new_version }} \
             --push .
 
           # Push the :latest tag if merging into main or it's a major version bump
           if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ env.is_major_bump }}" == "true" ]]; then
-            docker buildx build --platform linux/amd64,linux/arm64 \
+            podman build --platform linux/amd64,linux/arm64 \
               -t contre95/expense-mate:latest \
               --push .
           fi
