--- a/.github/workflows/container-build-pipeline.yaml
+++ b/.github/workflows/container-build-pipeline.yaml
@@ -1,32 +1,27 @@
 name: Build and Push Docker Image
-
 on:
   pull_request:
     branches:
       - main
     types: [closed]
-
 jobs:
   build-and-push:
+    if: github.event.pull_request.merged == true && (github.event.pull_request.head.ref == 'develop' || startsWith(github.event.pull_request.head.ref, 'feature/'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Fetch all history for all tags and branches
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Get the latest tag
         id: get_tag
         run: |
@@ -36,7 +31,6 @@ jobs:
           latest_tag=$(git describe --tags --match "v*.*.*" --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
           echo "tag=$latest_tag" >> $GITHUB_ENV
-
       - name: Determine new version
         id: determine_version
         run: |
@@ -60,7 +54,6 @@ jobs:
           new_version="v${major}.${minor}.${patch}"
           echo "New version: $new_version"
           echo "new_version=$new_version" >> $GITHUB_ENV
-
       - name: Build and push Container image
         run: |
           # Build and push the versioned image
@@ -73,13 +66,11 @@ jobs:
             podman build --platform linux/amd64,linux/arm64 \
               -t contre95/expense-mate:latest . && podman image push contre95/expense-mate:latest
           fi
-
       - name: Create Git tag
         if: ${{ github.event.pull_request.merged == true }}
         run: |
           git tag ${{ env.new_version }}
           git push origin ${{ env.new_version }}
-
       - name: Create GitHub Release
         if: ${{ github.event.pull_request.merged == true }}
         uses: actions/create-release@v1
