--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ SQLITE_PATH=./exp.db
 JSON_STORAGE_PATH=./users.json
 
 # CORS_ALLOWLIST= * or https://vpn.yourdomain.xyz
-CORS_ALLOWLIST=
+CORS_ALLOWLIST=*
 
 
 # Telegram Bot
