--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -11,21 +11,34 @@ jobs:
         with:
           fetch-depth: 0
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: podman/setup-qemu-action@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: podman/setup-buildx-action@v2
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: podman/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set is_major_bump variable
+        id: set_major_bump
+        run: |
+          version=${{ github.event.release.tag_name }}
+          if [[ $version =~ ^[0-9]+\.[0-9]+\.0$ ]]; then
+            echo "is_major_bump=true" >> $GITHUB_ENV
+          else
+            echo "is_major_bump=false" >> $GITHUB_ENV
+          fi
       - name: Build and push Container image
         run: |
           version=${{ github.event.release.tag_name }}
-          docker build --platform linux/amd64,linux/arm64 -t contre95/expense-mate:$version .
-          docker push contre95/expense-mate:$version
+          podman push contre95/expense-mate:$version
+
+          # Tag and push the :beta tag
+          podman tag contre95/expense-mate:$version contre95/expense-mate:beta
+          podman push contre95/expense-mate:beta
 
           if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ env.is_major_bump }}" == "true" ]]; then
-            docker build --platform linux/amd64,linux/arm64 -t contre95/expense-mate:latest .
-            docker push contre95/expense-mate:latest
+            # Tag and push the :latest tag
+            podman tag contre95/expense-mate:$version contre95/expense-mate:latest
+            podman push contre95/expense-mate:latest
           fi
