--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,8 +1,7 @@
 name: Build and Push Docker Image
 on:
   release:
-    types: [created]
-
+    types: [created, published]
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -30,6 +29,8 @@ jobs:
             echo "is_major_bump=false" >> $GITHUB_ENV
           fi
       - name: Build and push Container image
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           version=${{ github.event.release.tag_name }}
           podman push contre95/expense-mate:$version
