--- a/.github/workflows/version-release.yaml
+++ b/.github/workflows/version-release.yaml
@@ -53,4 +53,4 @@ jobs:
           release_name: Release ${{ env.new_version }}
           draft: false
           prerelease: false
-          body_path: CHANGELOG.md
+          body_path: CHANGELOG.me
