--- a/.github/workflows/version-release.yaml
+++ b/.github/workflows/version-release.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
         with:
           tag_name: ${{ env.new_version }}
           release_name: Release ${{ env.new_version }}
