--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,8 +1,10 @@
 name: Build and Push Docker Image
+
 on:
-  release:
-    types:
-      - created
+  workflow_run:
+    workflows: ["Tag and Create Release"]
+    types: [completed]
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
