--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           version=\${{ github.event.release.tag_name }}
           if [[ $version =~ ^[0-9]+\.[0-9]+\.0$ ]]; then
-            echo "is_major_bump=true" >> \$GITHUB_ENV
+            echo "is_major_bump=true" >> $GITHUB_ENV
           else
             echo "is_major_bump=false" >> $GITHUB_ENV
           fi
