--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -20,14 +20,23 @@ jobs:
       - name: Login to DockerHub
         run: |
           podman login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} docker.io
+      - name: Get tag name from triggering workflow
+        id: get_tag
+        run: |
+          # Fetch the outputs of the triggering workflow
+          RUN_ID=${{ github.event.workflow_run.id }}
+          TAG_NAME=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/runs/$RUN_ID/jobs" \
+            | jq -r '.jobs[0].steps[] | select(.name == "Output tag name") | .outputs.tag_name')
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
       - name: Set is_major_bump variable
         id: set_major_bump
         run: |
           # Fetch all tags (including existing ones)
           git fetch --tags
 
-          # Get the NEWLY CREATED tag from the GitHub event
-          NEW_VERSION="${{ github.event.release.tag_name }}"
+          # Get the NEWLY CREATED tag from the triggering workflow
+          NEW_VERSION="${{ steps.get_tag.outputs.tag_name }}"
 
           # Get the LATEST EXISTING TAG (before this release)
           LATEST_EXISTING_VERSION=$(git tag --sort=-v:refname | grep -v "$NEW_VERSION" | head -n 1)
