--- a/.github/workflows/version-release.yaml
+++ b/.github/workflows/version-release.yaml
@@ -66,7 +66,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          version=${{ github.event.release.tag_name }}
+          version=${{ env.new_version }}
           podman image build -t contre95/expense-mate:$version .
           podman push contre95/expense-mate:$version
           # Tag and push the :beta tag
