--- a/.github/workflows/tag-release-build-push.yaml
+++ b/.github/workflows/tag-release-build-push.yaml
@@ -6,7 +6,7 @@ on:
     types: [closed]
 jobs:
   tag-and-release:
-    if: github.event.pull_request.merged == true && (startsWith(github.event.pull_request.head.ref, 'fix/') || startsWith(github.event.pull_request.head.ref, 'feature/'))
+    if: github.event.pull_request.merged == true && (startsWith(github.event.pull_request.head.ref, 'fix/') || startsWith(github.event.pull_request.head.ref, 'feature/') || startsWith(github.event.pull_request.head.ref, 'release/'))
     runs-on: ubuntu-latest
     outputs:
       tag_name: ${{ steps.set_tag.outputs.tag_name }}
