--- a/.github/workflows/tag-release-build-push.yaml
+++ b/.github/workflows/tag-release-build-push.yaml
@@ -90,7 +90,7 @@ jobs:
           podman push contre95/expense-mate:$version
 
           # Tag and push the :beta tag
-          podman image build --build-arg IMAGE_TAG=beta-$version -t contre95/expense-mate:beta .
+          podman image build --no-cache --build-arg IMAGE_TAG=beta-$version -t contre95/expense-mate:beta .
           podman push contre95/expense-mate:beta
 
           if [[ "${{ github.event.pull_request.head.ref }}" == release/* ]]; then
