Mini refactor on ai naming to ollamaAPI

--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,5 @@ TELEGRAM_APITOKEN=
 # This are the ones that I found that work best, but feel free to try your own
 VISION_MODEL=llama3.2-vision:11b-instruct-q4_K_M
 TEXT_MODEL=llama3.2:3b-instruct-q6_K 
-OLLAMA_ENDPOINT=http://localhost:11434/api/generate
+OLLAMA_ENDPOINT=http://localhost:11434
 
