--- a/.github/workflows/tag-release-build-push.yaml
+++ b/.github/workflows/tag-release-build-push.yaml
@@ -35,7 +35,7 @@ jobs:
 
           if [[ "${{ github.event.pull_request.head.ref }}" == fix/* ]]; then
             patch=$((patch + 1))
-          elif [[ "${{ github.event.pull_request.head.ref }}" == feature/* ]]; then
+          elif [[ "${{ github.event.pull_request.head.ref }}" == feature/* || "${{ github.event.pull_request.head.ref }}" == dev/* ]]; then
             minor=$((minor + 1))
             patch=0
           elif [[ "${{ github.event.pull_request.head.ref }}" == release/* ]]; then
