--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,6 @@ STORAGE_ENGINE="sqlite"
 # true or false to initialize sysmtem filled with an example, if deleted, items will be recreated on restart
 LOAD_SAMPLE_DATA=true
 
-# MySQL Database:
-# podman run --rm --name mysql-container -e MYSQL_DATABASE=expdb -e MYSQL_USER=expuser -e MYSQL_PASSWORD=11223344 -e MYSQL_ROOT_PASSWORD=rootpassword -p 3306:3306 mysql:latest
-MYSQL_USER=expuser
-MYSQL_PASS=11223344
-MYSQL_PORT=3306
-MYSQL_HOST=localhost
-MYSQL_DB=expdb
-
 # SQLite storage path
 SQLITE_PATH=./exp.db
 
@@ -28,7 +20,7 @@ CORS_ALLOWLIST=*
 TELEGRAM_APITOKEN=
 
 # This are the ones that I found that work best, but feel free to try your own
-VISION_MODEL=llama3.2-vision:11b-instruct-q4_K_M
-TEXT_MODEL=llama3.2:3b-instruct-q6_K 
+OLLAMA_VISION_MODEL=llama3.2-vision:11b-instruct-q4_K_M
+OLLAMA_TEXT_MODEL=llama3.2:3b-instruct-q6_K 
 OLLAMA_ENDPOINT=http://localhost:11434
 
