--- a/pod.yml
+++ b/pod.yml
@@ -1,29 +1,46 @@
----
 apiVersion: v1
 kind: Pod
 metadata:
-  name: expenses
+  name: expense-mate
+  annotations:
+    io.podman.annotations.infra.name: "expense-mate-infra"
+  labels:
+    app: Expense Mate
+    purpose: Tracking expenses
+    category: Tools
+    language: Go
 spec:
-  restartPolicy: OnFailure
   containers:
-    - name: expenses-bot
-      image: golang:1.20
+    - name: expense-mate
+      image: docker.io/contre95/expense-mate:beta
+      ports:
+        - containerPort: 3535
+          hostPort: 3535
       env:
-        - name: "EXPENSES_USER"
-          value: "expuser"
-        - name: "MYSQL_HOST"
-          value: "contre.io"
-        - name: "MYSQL_PORT"
-          value: 3306
-        - name: "EXPENSES_DB"
-          value: "expdb"
-        - name: "TELEGRAM_APITOKEN"
+        - name: STORAGE_ENGINE
+          value: "sqlite"
+        - name: LOAD_SAMPLE_DATA
+          value: "false"
+        - name: SQLITE_PATH
+          value: "/data/exp.db"
+        - name: VISION_MODEL
+          value: llama3.2-vision:11b-instruct-q4_K_M
+        - name: TEXT_MODEL
+          value: llama3.2:3b-instruct-q6_K
+        - name: OLLAMA_ENDPOINT
+          value: http://localhost:11434
+        - name: JSON_STORAGE_PATH
+          value: "/data/users.json"
+        - name: TELEGRAM_APITOKEN
           valueFrom:
             secretKeyRef:
-              name: expenses-secrets
-              key: telegram-token
-        - name: "EXPENSES_PASS"
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secrets
-              key: mysql-expenses-pass
+              name: bots-secrets
+              key: expensemate-telegram-token
+      volumeMounts:
+        - mountPath: /data
+          name: data
+  volumes:
+    - name: data
+      hostPath:
+        path: ./data
+        type: DirectoryOrCreate
