--- a/pod.yml
+++ b/pod.yml
@@ -31,11 +31,11 @@ spec:
           value: http://localhost:11434
         - name: JSON_STORAGE_PATH
           value: "/data/users.json"
-        - name: TELEGRAM_APITOKEN
-          valueFrom:
-            secretKeyRef:
-              name: bots-secrets
-              key: expensemate-telegram-token
+        # - name: TELEGRAM_APITOKEN
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: bots-secrets
+        #       key: expensemate-telegram-token
       volumeMounts:
         - mountPath: /data
           name: data
